uploader: fix signing area height so it does not jump all over the screen on start

--- a/public/upload.css
+++ b/public/upload.css
@@ -202,6 +202,7 @@ body
 
 .signinWrapper{
     margin-top: 25px;
+    min-height: 41px;
 }
 
 .box.is-uploading .signinWrapper,
